tests/baselines/reference/esModuleInteropUsesExportStarWhenDefaultPlusNames.errors.txt
tests/cases/compiler/esModuleInteropUsesExportStarWhenDefaultPlusNames.ts(1,28): error TS2307: Cannot find module './dep'.


==== tests/cases/compiler/esModuleInteropUsesExportStarWhenDefaultPlusNames.ts (1 errors) ====
    import Deps, { var2 } from './dep';
                               ~~~~~~~
!!! error TS2307: Cannot find module './dep'.
    void Deps;
    void var2;